@@ -1,3 +1,7 @@
+* Fri Aug 17 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.0.6-0
+- Added minimum size for sudo::user_specification::hostlist, because an
+  empty list is not permitted.
+
 * Wed Jun 20 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.5-0
 - Add both fqdn and hostname to user_specification entries by default
 
